--- a/Photo Map/Base.lproj/Main.storyboard
+++ b/Photo Map/Base.lproj/Main.storyboard
@@ -24,9 +24,8 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="mGa-Tk-ntG">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hw7-Xj-VFX">
-                                <rect key="frame" x="155" y="527" width="64" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hw7-Xj-VFX">
+                                <rect key="frame" x="155.5" y="528" width="64" height="64"/>
                                 <state key="normal" image="camera"/>
                                 <connections>
                                     <action selector="onCameraButton:" destination="ghP-Ww-KKQ" eventType="touchUpInside" id="wIN-EY-J3L"/>
@@ -36,8 +35,10 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ufw-e1-uLx" firstAttribute="top" secondItem="mGa-Tk-ntG" secondAttribute="bottom" id="KuM-8V-dY0"/>
+                            <constraint firstItem="ufw-e1-uLx" firstAttribute="top" secondItem="Hw7-Xj-VFX" secondAttribute="bottom" constant="75" id="ObI-Ny-QzE"/>
                             <constraint firstItem="mGa-Tk-ntG" firstAttribute="top" secondItem="vrG-Wc-0bn" secondAttribute="bottom" id="imT-wC-vSG"/>
                             <constraint firstAttribute="trailing" secondItem="mGa-Tk-ntG" secondAttribute="trailing" id="reV-2y-yDI"/>
+                            <constraint firstItem="Hw7-Xj-VFX" firstAttribute="centerX" secondItem="Lxe-6f-KEH" secondAttribute="centerX" id="rhv-jg-SS2"/>
                             <constraint firstItem="mGa-Tk-ntG" firstAttribute="leading" secondItem="Lxe-6f-KEH" secondAttribute="leading" id="uAb-Te-5Cj"/>
                         </constraints>
                     </view>
